# HTTPayer

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  PRD.md  README.md  TODO.md
backend/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  notes.txt  package-lock.json  package.json  pyproject.toml  rebalance_log.csv  requirements.in  tsconfig.json
backend/cache_dir/: cache.db  cache.db-shm  cache.db-wal
backend/facilitator/: facilitator.py
backend/httpayer/: __init__.py  client.py  core.py  gate.py
backend/httpayer-ts/: README.md
backend/httpayer-ts/examples/: basic-usage.ts  express-server.ts
backend/httpayer-ts/src/: client.ts  index.ts
backend/httpayer-ts/tests/: client.test.ts
backend/httpayer/treasury/: burn_rate.py  liquidity.py
backend/httpayer_core/: __init__.py  core.py
backend/httpayer_core/treasury/: liquidity.py
backend/src/: demoServer.ts  server.ts
backend/src/types/: x402-fetch.d.ts
backend/tests/: example_client.ts  example_server.js  package-lock.json  package.json  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  tsconfig.json
backend/tests/src/: demoClient.ts
backend/treasury/: cli.py  main.py
backend/treasury/templates/: index.html
backend/treasury/tests/: test1.py  test2.py  test3.py  test4.py
backend/x402_servers/: server.py  x402_server.py
cli/: .env.sample  .gitignore  README.md  cli.py  data.db  pyproject.toml
cli/calls/: joke.json
cli/httpayer_cli/: __init__.py  ai_cache.py  ai_provider.py  auth_manager.py  cli.py  llm.py  plan_runner.py  schemas.py
cli/mydbs/: data.db
cli/plans/: joke.yaml  joke_story.yaml  plan.yaml
cli/requests/: request.json
cli/responses/: joke_story_1759028449.md  joke_story_1759029045.md  joke_story_1759029359.md  joke_story_1759029599.md  joke_story_1759029663.md  joke_story_1759029964.md  joke_summary_1759027794.md  response_1758944367.html  response_1758945541.html  response_1759007802.csv  response_1759018085.json  response_1759018105.json  response_1759019689.html  response_1759019822.html  response_1759020072.html  response_1759020137.html  response_1759023877.html
cli/responses/endpoints/: endpoints.json
cli/results/: joke_1759024666.md  joke_1759024767.md
contracts/: README.md  foundry.toml  package-lock.json  package.json  source.js  startup.txt
frontend/: ARCHITECTURE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
(+34 files in other folders)
