[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpayer-cli"
version = "0.1.0"
description = "CLI for HTTPayer Usage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.1.8",
    "httpayer>=0.1.4",
    "pydantic>=2.11.9",
]
